# amadeus-wallet-tauri

./: .env  .env.example  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
scripts/: setup-android-ndk.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: amadeus_tx.rs  lib.rs  main.rs  network.rs
src-tauri/src/wallet/: error.rs  keys.rs  mod.rs  service.rs  storage.rs
src/components/: OnboardingCheck.tsx
src/components/auth/: CreatePrivateKey.tsx  ImportPrivateKey.tsx  index.tsx
src/components/layout/: AuthLayout.tsx  BottomNav.tsx  HomeLayout.tsx  ProtectedHomeLayout.tsx  WalletLayout.tsx  index.tsx
src/components/settings/: AboutSection.tsx  DataSection.tsx  NetworkSection.tsx  PasswordSection.tsx  WalletFileSection.tsx  index.tsx
src/components/transactions/: TransactionDetailDialog.tsx  TransactionDetailSheet.tsx  TransactionList.tsx  TransactionRow.tsx  index.tsx
src/components/ui/: tooltip.tsx
src/contexts/: WalletContext.tsx
src/lib/: constants.ts  globals.ts  recentAddresses.ts  requestLink.ts  settings.ts  transactionDisplay.ts  transactions.ts  utils.ts  wallet.ts
src/lib/schemas/: contact.ts  index.ts  password.ts  transfer.ts
src/pages/: PageNotFound.tsx  ProtectedRoute.tsx
src/pages/auth/: Login.tsx  Register.tsx  index.tsx
src/pages/contact/: index.tsx
src/pages/feedback/: index.tsx
src/pages/home/: index.tsx
src/pages/news/: index.tsx
src/pages/onboarding/: index.tsx
src/pages/settings/: AboutPage.tsx  (+5 more)
(+4 files in other folders)
