[package]
name = "amadeus-wallet-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amadeus_wallet_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
argon2 = "0.5"
aes-gcm = "0.10"
getrandom = "0.3.4"
base64 = "0.22"
bs58 = "0.5"
rand = "0.9"
blst = "0.3"
bls12_381 = { version = "0.8", git = "https://github.com/vans163/bls12_381" }
group = "0.13"
reqwest = { version = "0.13.1", features = ["json"] }
sha2 = "0.10"
serde_bytes = "0.11"
